deprecated/MinIMUv5Kalman/error.txt
아두이노:1.8.3 (Windows 10), 보드:"Arduino/Genuino Uno"

C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino\main.cpp: In function 'main':

C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino\main.cpp:51:1: error: unable to find a register to spill in class 'POINTER_REGS'

 }

 ^

C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino\main.cpp:51:1: error: this is the insn:

(insn 1115 1114 1117 55 (set (reg:SF 262 [ D.2806 ])

        (mem:SF (post_inc:HI (reg:HI 16 r16 [orig:228 ivtmp.170 ] [228])) [12 MEM[base: _124, offset: 0B]+0 S4 A8])) D:\Melda\Documents\Arduino\Capstone\experiment\MinIMUv5\MinIMUv5Kalman\MinIMUv5Kalman.ino:231 100 {*movsf}

     (expr_list:REG_INC (reg:HI 16 r16 [orig:228 ivtmp.170 ] [228])

        (nil)))

C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino\main.cpp:51: confused by earlier errors, bailing out

lto-wrapper: C:\Program Files (x86)\Arduino\hardware\tools\avr/bin/avr-gcc returned 1 exit status

c:/program files (x86)/arduino/hardware/tools/avr/bin/../lib/gcc/avr/4.9.2/../../../../avr/bin/ld.exe: error: lto-wrapper failed

collect2.exe: error: ld returned 1 exit status

exit status 1
보드 Arduino/Genuino Uno 컴파일 에러.

이 리포트는 파일 -> 환경설정에 "컴파일중 자세한 출력보이기"를
활성화하여 더 많은 정보를
보이게 할 수 있습니다.
